BUKA BY PENASTORE

--- a/inginku.html
+++ b/inginku.html
@@ -54,7 +54,7 @@ Audio('https://inginku.likeadream.repl.co/faudio.mp3');audio.play();}
        
        async function pesan(){
        	await swals.fire({
-                  title: 'Pesan untuk orang yang aku sayang', 
+                  title: 'Pesan untuk orang yang aku sayang BY PENASTORE', 
                   imageUrl: 'https://i.postimg.cc/mkrwzGGL/bubududu-panda.gif',
                   imageWidth: 120, imageHeight: 120,
                  });   	
@@ -69,7 +69,7 @@ Audio('https://inginku.likeadream.repl.co/faudio.mp3');audio.play();}
                   imageWidth: 120, imageHeight: 120,
                  });
                  await swals.fire({
-                  title: 'Dan gak boleh nakal ya! &#129324;',
+                  title: 'Dan gak boleh nakal ya sayang! &#129324;',
                   imageUrl: 'https://i.postimg.cc/wvmq9gCM/mimibubu.gif',
                   imageWidth: 120, imageHeight: 120,
                  });
